Run Snapshot tests in headless mode in a separate modules